<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ZodiacScreenActivity">

    <TextView
        android:id="@+id/textViewYourSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="@string/textViewYourSign"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBirthday"
        android:layout_width="98dp"
        android:layout_height="33dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/textViewBirthday"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBirthDate" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/textViewAge"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBirthday" />

    <TextView
        android:id="@+id/textViewBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/textViewBirthDate"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSign" />

    <TextView
        android:id="@+id/textViewUserBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        android:fontFamily="casual"
        android:text="@string/textViewUserBirthDate"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSign" />

    <TextView
        android:id="@+id/textViewUserAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="112dp"
        android:fontFamily="casual"
        android:text="@string/textViewUserAge"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserBirthday" />

    <TextView
        android:id="@+id/textViewUserBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="112dp"
        android:fontFamily="casual"
        android:text="@string/textViewUserBirthday"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserBirthDate" />

    <TextView
        android:id="@+id/textViewAbout"
        android:layout_width="288dp"
        android:layout_height="199dp"
        android:layout_marginTop="24dp"
        android:background="#352D2D"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/textViewAbout"
        android:textAlignment="center"
        android:textColor="#F7CE53"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAge" />

    <ImageView
        android:id="@+id/imageViewSign"
        android:layout_width="266dp"
        android:layout_height="169dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewYourSign"
        app:srcCompat="@drawable/aquarius" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="@string/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAbout" />
</androidx.constraintlayout.widget.ConstraintLayout>